[project]
name = "codebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.59",
    "dataset>=1.6.2",
    "e2b-code-interpreter>=1.0.5",
    "python-dotenv>=1.0.1",
    "retry>=0.9.2",
]

[tool.ruff.lint]
extend-select =[
    "I",  # imports
    "ERA001",  # dead code
    "T100",  # debugger
]
